--- a/src/main.scss
+++ b/src/main.scss
@@ -164,3 +164,24 @@ article {
     margin-bottom: var(--spacing);
   }
 }
+
+/** Fix dropdown button seo issue **/
+details[role=list] summary+ul li a, li[role=list]>ul {
+  li {
+    .button-dropdown-a {
+      display: block;
+      margin: calc(var(--form-element-spacing-vertical) * -0.5)
+        calc(var(--form-element-spacing-horizontal) * -1);
+      padding: calc(var(--form-element-spacing-vertical) * 0.5)
+        var(--form-element-spacing-horizontal);
+      overflow: hidden;
+      color: var(--dropdown-color);
+      text-decoration: none;
+      text-overflow: ellipsis;
+    
+      &:hover {
+        background-color: var(--dropdown-hover-background-color);
+      }
+    }
+  }
+}
